# textify

./: .gitignore  Dockerfile  FLOWCHART.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/textify/: __init__.py  __main__.py  cli.py  models.py  transcriber.py  utils.py
tests/: test_cli.py  test_models.py  test_utils.py
